--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
     width: 1.1rem;
   } 
   .App{
-    background-image: url('bg.jpg');
+    background-image: url('./public/bg.jpg');
     background-repeat: no-repeat;
     height: 100vh;
     margin: 0;
