--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@
 * {
   box-sizing: border-box;
   }
+  #root {
+    margin: 0 0;
+    padding: 0 0;
+  }
   body{
-  margin: 0;
+  margin: 0 0;
+  padding: 0 0;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   h1, h2, h3, hr {
@@ -30,8 +35,9 @@
     width: 1.1rem;
   } 
   .App{
-    background-image: url('/bg.jpg');
+    background-image: url('../public/bg.jpg');
     background-repeat: no-repeat;
     height: 100vh;
     margin: 0;
+    padding: 0;
   }
